# InversityBrocoliToBurgers

./: .gitignore  Pitch.md  Prep.md  README.md  build.sh  building.md  conanfile.txt  test.sh
adBlocker/: background.js  manifest.json  parseConfig.js
filtering/: CMakeLists.txt  build.sh  compile_commands.json
filtering/src/: .clang-tidy  CMakeLists.txt  conanfile.txt  filterList.hpp  listAccess.cpp  listAccess.hpp  main.cpp  parseConfig.cpp  parseConfig.hpp  searchTerms.txt  strongTypes.hpp
filtering/tests/: CMakeLists.txt  ParseTest.txt  parseCFGTests.cpp
src/: CMakeLists.txt  background.js  blockingListA.txt  conanfile.txt  config.txt  easylist.txt  filterList.cpp  listAccess.cpp  listAccess.hpp  main.cpp  manifest.json  parseConfig.cpp  parseConfig.hpp  parseConfig.js  searchTerms.txt  testing.txt
tests/: CMakeLists.txt  filteringTests.cpp  parseTests.cpp
