cmake_minimum_required(VERSION 3.25)
project(ObesityTacklingAdBlocker CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED 23)

add_library(low_level_code STATIC listAccess.hpp listAccess.cpp)
add_executable(${PROJECT_NAME} main.cpp)
find_package(CURL REQUIRED)
target_link_libraries(low_level_code CURL::libcurl)
target_link_libraries(${PROJECT_NAME} low_level_code )
target_link_libraries(${PROJECT_NAME} CURL::libcurl)
